# pfbwt-f

./: .gitmodules  CMakeLists.txt  MMapWrapper.hpp  Makefile  README.md  VecWrapper.hpp  file_wrappers.hpp  hash.hpp  merge_pfp.cpp  parse-f.cpp  parse-f.hpp  pfbwt-f.cpp  pfbwt-f.hpp  pfbwt_io.hpp  pfparser.hpp  sdsl_bv_wrappers.hpp  utils.c  utils.h  vcf_to_bwt.py
gsa/: gsacak.c  gsacak.h
include/: config.h  file_wrappers.hpp  hash.hpp  marker.hpp  marker_array.hpp  pfbwt.hpp  pfbwt_io.hpp  pfparser.hpp  rle_window_array.hpp  sa_aux.hpp  utils.h  vcf_scanner.hpp
marker_array/: marker.hpp  marker_array.hpp  marker_index.hpp  marker_index_to_array.cpp  merge_marker_indexes.cpp  merge_mps.cpp  rle_window_array.hpp  vcf_scan.cpp  vcf_scanner.hpp
scripts/: dump_intfile.cpp  generate_marker_array.py  generate_truth_set.py  generate_truth_sets.sh  pfbwt_marker_array.py  pfbwt_marker_array.sh  random_vcf.py  readable_markers.py  readable_sa.py  vcf_haps_to_fasta.py
src/: consensus.cpp  dump_markers.cpp  merge_mps.cpp  merge_pfp.cpp  mps_to_ma.cpp  vcf_scan.cpp
tests/: marker_test.cpp  mult_contig_test.sh  quick_test.py  quick_test.sh  quick_test_rssa.sh  quick_test_sa.sh  single_contig_test.sh  test_parser.cpp  vcf_to_bwt_test.sh  vcf_to_bwt_test_no_markers.sh
tests/data/: mult_chroms.bwt  mult_chroms.markers  mult_chroms.sa  mult_chroms.vcf.gz.csi  mult_chroms_indels.fa  single_chrom.bwt  single_chrom.fa  single_chrom.markers  single_chrom.sa  single_chrom.vcf.gz.csi
